main-text in two-columns placed inside paragraph tags

--- a/blocks/two-columns/__paragraph/two-columns__paragraph.css
+++ b/blocks/two-columns/__paragraph/two-columns__paragraph.css
@@ -1,6 +1,6 @@
 .two-columns__paragraph{
   margin-bottom: 30px;
 }
-.two-columns__paragraph:last-child{
+li:last-child .two-columns__paragraph{
   margin-bottom: 0px;
 }
