fixing the first list of bugs

--- a/blocks/feynman/__image/feynman__image.css
+++ b/blocks/feynman/__image/feynman__image.css
@@ -1,8 +1,9 @@
 .feynman__image {
+    width: 867px;
+    height: 637px;
     position: absolute;
     left: 0;
     bottom: 0;
-    width: 867px;
-    height: 637px;
-    object-fit: cover;
+    object-fit: contain;
+    background-image: url(../../../images/feinman.png);
 }
