--- a/blocks/feynman/feynman.css
+++ b/blocks/feynman/feynman.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 890px;
+    min-height: 890px;
     position: relative;
     box-sizing: border-box;
     background-color: #f2f2f2;
