--- a/blocks/kaufman/__triangle/kaufman__triangle.css
+++ b/blocks/kaufman/__triangle/kaufman__triangle.css
@@ -1,5 +1,12 @@
 .kaufman__triangle {
     position: absolute;
+    top: 0;
     right: -210px;
+    width: 995px;
+    height: 1006px;
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-image: url(../../../images/triangle.svg);
     z-index: -1;
 }
